<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PruebaGMaps</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="password">Password</string>
    <string name="iniciarSesion">Iniciar Sesión</string>
    <string name="userName">User Name</string>
    <string name="olvidoContrasenna">¿Olvidó su contraseña?</string>
    <string name="fbLogin">Login con Facebook</string>
    <string name="desc">Imagen de Prueba</string>
    <string name="signIn">Sign up</string>
    
    <string name="add_event_progress">Creating event</string> 
    
    <string name="add_event">Add event</string>
    
    <string name="error_no_location_found">No location found</string>
    
    <string name="error_no_internet">No internet access</string>
    
    <string name="error_user_already_exists">Given email already exists</string>
    
    <string name="error_user_doesnt_exist">User doesn\'t exists</string>
    
    <string name="error_user_info_unreachable">User info could not be loaded</string>
    
    <string name="mobileUser">Mobile User</string>
    
    <string name="event_location">Event\'s location</string>
    
    <string name="LocalUser">Local User</string>
    
    <string name="cancel">Cancel</string>
    
    <string name="log_out">Log out</string>
    
    <string name="prompt_userName">Nombre de Usuario</string>
    
    <string name="prompt_email">Email</string>
    
    <string name="prompt_emailConfirm">Confirmar Email</string>
    
    <string name="prompt_password">Password</string>
    
    <string name="prompt_passwordConf">Confirmar Password</string>
    
    <string name="prompt_userDesc">Descripcion Usuario</string>

    <color name="orange">#99F15a24</color>

    <string name="title_activity_map">Going On</string>

    <string name="event_name_editText">Event\'s name</string>

    <string name="event_description">Event\'s description</string>

    <string name="menu_settings">Menu Settings</string>

    <string name="profile_user">Perfil del Usuario</string>

    <string name="descripcion_robert">Soy un actor, cantante y compositor estadounidense.</string>

    <string name="name_robert">Robert Downey Jr.</string>

    <string name="amount_friends">0</string>
    
    <string name="friends">Amigos</string>
    
    <string name="amount_friends_inc">amigos</string>
    
    <string name="amount_fans">+450 fans</string>

    <string name="amount_checkins">0</string>
    
    <string name="checkins">Check-ins</string>
    
    <string name="amount_photos">0</string>
    
    <string name="photos">Photos</string>

    <string name="historial_eventos">Historial de eventos</string>
    
    <string name="eventos">Eventos</string>

    <string name="eventos_asistir">Eventos a asistir</string>
    
    <string name="sign_in_process">Signing up</string>
    
    <string name="app_id">744322655611980</string>
    
    <string name="descripcion_usuario">Frase descriptiva que quiera poner el usuario del app</string>
    
    <string name="nombre_usuario">Nombre del usuario</string>
    
    <string-array name="event_categories_array">
        <item>Concert</item>
        <item>Party</item>
        <item>Theater</item>
        <item>Food</item>
        <item>Business</item>
        <item>Art</item>
    </string-array>
    
    <string name="event_name">Event\'s name</string>
    
    <string name="event_price">Event\'s price</string>
    
    <string name="create_event">Create event</string>
        
    <string name="select_event_categorie">Select event categorie</string>
    
     <string name="select_event_initial_date">Select event\'s initial date:</string>
     
    <string name="select_event_final_date">Select event\'s final date:</string>
    
    <string name="select_event_initial_time">Select event\'s initial time:</string>
    
    <string name="select_event_final_time">Select event\'s final time:</string>
    
    <string name="create_event_process">Creating Event</string>
    
    <string name="error_event_not_valid">Event is not valid</string>
    
    <string name="add_event_progress">Event\'s information is loading</string>
    
    <string name="go_waze">Get Direction</string>
    
    <string name="event_category">Event\'s Category</string>
    
    <string name="event_date">Event\'s Date</string>
    
    <string name="event_time">Event\'s Time</string>
    <color name="GO_light_gray">#999999</color>
    <color name="GO_dark_gray">#FF666666</color>
    
    
</resources>
