<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity" >
    
     <ScrollView
        android:id="@+id/sigin_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@color/orange" >
        
         <LinearLayout 
		    android:id="@+id/innercontainer"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:background="@color/orange"
		    android:paddingBottom="@dimen/activity_vertical_margin"
		    android:paddingLeft="@dimen/activity_horizontal_margin"
		    android:paddingRight="@dimen/activity_horizontal_margin"
		    android:paddingTop="@dimen/activity_vertical_margin"
		    android:orientation="vertical"
		    tools:context=".MainActivity" >
    
		      <TextView
		           android:id="@+id/textViewSignIn"
		           android:layout_width="wrap_content"
		           android:layout_height="wrap_content"
		           android:text="@string/signIn"
		           android:textAppearance="?android:attr/textAppearanceLarge" />
		
			 <EditText
					android:id="@+id/userName"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="20dp"
					android:hint="@string/prompt_userName"
					android:maxLines="1"
					android:singleLine="true" />
			 
			 <EditText
					android:id="@+id/email"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="10dp"
					android:hint="@string/prompt_email"
					android:inputType="textEmailAddress"
					android:maxLines="1"
					android:singleLine="true" />
		
		     <EditText
		              android:id="@+id/password"
		              android:layout_width="match_parent"
		              android:layout_height="wrap_content"
		              android:layout_marginTop="10dp"
		              android:hint="@string/prompt_password"
		              android:inputType="textPassword"
		              android:maxLines="1"
		              android:singleLine="true" />
		     
		     <EditText
		              android:id="@+id/passwordConf"
		              android:layout_width="match_parent"
		              android:layout_height="wrap_content"
		              android:layout_marginTop="10dp"
		              android:hint="@string/prompt_passwordConf"
		              android:inputType="textPassword"
		              android:maxLines="1"
		              android:singleLine="true" />
		
		     <EditText
		         android:id="@+id/userDescription"
		         android:layout_width="match_parent"
		         android:layout_height="wrap_content"
		         android:layout_marginTop="10dp"
		         android:hint="@string/prompt_userDesc"
		         android:ems="10"
		         android:inputType="textMultiLine" >
				     </EditText>
				     
		     <RadioGroup
				android:id="@+id/radioGroup"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:orientation="horizontal"
				android:layout_marginLeft="15dp"
			    android:layout_marginTop="10dp"
				android:checkedButton="@+id/radioButton_mobile_user"
				>

					<RadioButton
			         android:id="@+id/radioButton_mobile_user"
			         android:layout_width="wrap_content"
			         android:layout_height="wrap_content"
			         android:text="@string/mobileUser" 
			         android:layout_gravity="left"
			         android:onClick="onRadioButtonClicked"
			         />
			     
			     <RadioButton
			         android:id="@+id/radioButton_local_user"
			         android:layout_width="wrap_content"
			         android:layout_height="wrap_content"
			         android:text="@string/LocalUser" 
			         android:layout_gravity="right"
			         android:onClick="onRadioButtonClicked"
			         />
				
			</RadioGroup>
			
		     <LinearLayout
		     android:layout_width="match_parent" 
		     android:layout_height="wrap_content" 
		     android:orientation="horizontal">
		     
		    <Button
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
		        android:layout_marginTop="10dp"
		        android:layout_marginLeft="30dp"
                android:text="@string/signIn" />
		    
		     <Button
                android:id="@+id/button_cancel_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
		        android:layout_marginLeft="30dp"
                android:text="@string/cancel" />
		     
		     </LinearLayout>
		     		     
     </LinearLayout>
     
     </ScrollView>

   	
</LinearLayout>